Renaiming some directories to a lower case format because I like it more.

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../Resources/master.css">
+    <link rel="stylesheet" href="../resources/master.css">
     <link rel="stylesheet" href="contact.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/sfmm.png">
+        <img src="../resources/sfmm.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -16,8 +16,8 @@
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
-            <td class="menu_element portfolio link"><a href="../Portfolio/portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link"><a href="../Hobbies/hobbies.html">Hobbies</a></td>
+            <td class="menu_element portfolio link"><a href="../portfolio/portfolio.html">Portfolio</a></td>
+            <td class="menu_element hobbies link"><a href="../hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact current">Contact</td>
           </tr>
         </table>
