--- a/Hobbies/mnr/modnationracers.html
+++ b/Hobbies/mnr/modnationracers.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../../Resources/master.css">
+    <link rel="stylesheet" href="../../resources/master.css">
     <link rel="stylesheet" href="modnationracers.css">
     <title>Connor Deakin</title>
   </head>
@@ -16,9 +16,9 @@
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
-            <td class="menu_element portfolio link"><a href="../../Portfolio/portfolio.html">Portfolio</a></td>
+            <td class="menu_element portfolio link"><a href="../../portfolio/portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies link"><a href="../hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
+            <td class="menu_element contact link"><a href="../../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
