--- a/Portfolio/code/codesamples.html
+++ b/Portfolio/code/codesamples.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../../Resources/master.css">
-    <link rel="stylesheet" href="../Resources/master_piece.css">
+    <link rel="stylesheet" href="../../resources/master.css">
+    <link rel="stylesheet" href="../resources/master_piece.css">
     <title>Connor Deakin</title>
   </head>
   <body>
@@ -17,8 +17,8 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
+            <td class="menu_element hobbies link"><a href="../../hobbies/hobbies.html">Hobbies</a></td>
+            <td class="menu_element contact link"><a href="../../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
@@ -46,7 +46,7 @@
       would be in a different space than the space that the game is in. This rendering pipeline
       makes it possible to render one space on top of another using one static RendererPool
       class and multiple Renderer instances. If you would like to see more about the engine
-      these files are used for, you can find it on the <a href="../XCraft/xcraft.html">X-Craft page</a>. It was built specifically
+      these files are used for, you can find it on the <a href="../xcraft/xcraft.html">X-Craft page</a>. It was built specifically
       for the game.</p>
       <h1 class="content_header">Object Allocator</h1>
       <p><a href="object_allocator.zip">Download Object Allocator</a></p>
