--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../Resources/master.css">
+    <link rel="stylesheet" href="../resources/master.css">
     <link rel="stylesheet" href="portfolio.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/riddlers_revenge.png">
+        <img src="../resources/riddlers_revenge.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -17,8 +17,8 @@
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
             <td class="menu_element portfolio current">Portfolio</td>
-            <td class="menu_element hobbies link"><a href="../Hobbies/hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="../Contact/contact.html">Contact</a></td>
+            <td class="menu_element hobbies link"><a href="../hobbies/hobbies.html">Hobbies</a></td>
+            <td class="menu_element contact link"><a href="../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
@@ -30,7 +30,7 @@
           <td class="amperage piece_element piece_language zero">Zero Engine</td>
           <td class="amperage piece_element piece_name">Amperage</td>
           <td class="amperage piece_element piece_description">A top down, 2D game where a player must quickly navigate through an imaginary circuit using an electrical charge.</td>
-          <td class="amperage piece_element piece_more"><div><a href="Amperage/amperage.html">More...</a></div></td>
+          <td class="amperage piece_element piece_more"><div><a href="amperage/amperage.html">More...</a></div></td>
         </tr>
       </table>
       <!-- Fuzor -->
@@ -39,7 +39,7 @@
           <td class="fuzor piece_element piece_language zero">Zero Engine</td>
           <td class="fuzor piece_element piece_name">Fuzor</td>
           <td class="fuzor piece_element piece_description">A 2D, sidescrolling platformer where four players take control of heroes to escape an alien infestation from their ship.</td>
-          <td class="fuzor piece_element piece_more"><div><a href="Fuzor/fuzor.html">More...</a></div></td>
+          <td class="fuzor piece_element piece_more"><div><a href="fuzor/fuzor.html">More...</a></div></td>
         </tr>
       </table>
       <!-- X-Craft -->
@@ -48,7 +48,7 @@
           <td class="xcraft piece_element piece_language cpp">C++</td>
           <td class="xcraft piece_element piece_name">X-Craft</td>
           <td class="xcraft piece_element piece_description">A top down, 2D, cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
-          <td class="xcraft piece_element piece_more"><div><a href="XCraft/xcraft.html">More...</a></div></td></td>
+          <td class="xcraft piece_element piece_more"><div><a href="xcraft/xcraft.html">More...</a></div></td></td>
         </tr>
       </table>
 <!-- 
@@ -57,7 +57,7 @@
           <td class="graphics piece_element piece_language cpp">C++</td>
           <td class="graphics piece_element piece_name">Graphics</td>
           <td class="graphics piece_element piece_description">A sample graphics application that displays a large number of graphics features in action.</td>
-          <td class="graphics piece_element piece_more"><div><a href="Graphics/graphics.html">More...</a></div></td></td>
+          <td class="graphics piece_element piece_more"><div><a href="graphics/graphics.html">More...</a></div></td></td>
         </tr>
       </table>
 -->
@@ -67,7 +67,7 @@
           <td class="phonet_generator piece_element piece_language cpp">C++</td>
           <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
           <td class="phonet_generator piece_element piece_description">A commandline based, multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
-          <td class="phonet_generator piece_element piece_more"><div><a href="PhonetGenerator/phonet_generator.html">More...</a></div>
+          <td class="phonet_generator piece_element piece_more"><div><a href="phonet_generator/phonet_generator.html">More...</a></div>
           </td>
         </tr>
       </table>
@@ -77,7 +77,7 @@
           <td class="water piece_element piece_language cpp">C++</td>
           <td class="water piece_element piece_name">Water</td>
           <td class="water piece_element piece_description"> An ocean editor that uses an implementation of gerstner waves and perlin noise in order to make a custom ocean surface.</td>
-          <td class="water piece_element piece_more"><div><a href="Water/water.html">More...</a></div></td>
+          <td class="water piece_element piece_more"><div><a href="water/water.html">More...</a></div></td>
         </tr>
       </table>
 -->
@@ -87,7 +87,7 @@
           <td class="water piece_element piece_language cpp">C++</td>
           <td class="water piece_element piece_name">Code Samples</td>
           <td class="water piece_element piece_description"> Selected samples of code that I have written over time.</td>
-          <td class="water piece_element piece_more"><div><a href="CodeSamples/codesamples.html">More...</a></div></td>
+          <td class="water piece_element piece_more"><div><a href="code/codesamples.html">More...</a></div></td>
         </tr>
       </table>
     </div>
