--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="Resources/master.css">
+    <link rel="stylesheet" href="resources/master.css">
     <link rel="stylesheet" href="index.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="Resources/fahrenheit.png">
+        <img src="resources/fahrenheit.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -16,9 +16,9 @@
           </tr>
           <tr>
             <td class="menu_element home current">Home</td>
-            <td class="menu_element portfolio link"><a href="Portfolio/portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link"><a href="Hobbies/hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="Contact/contact.html">Contact</a></td>
+            <td class="menu_element portfolio link"><a href="portfolio/portfolio.html">Portfolio</a></td>
+            <td class="menu_element hobbies link"><a href="hobbies/hobbies.html">Hobbies</a></td>
+            <td class="menu_element contact link"><a href="contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
