--- a/Hobbies/coaster/rollercoasters.html
+++ b/Hobbies/coaster/rollercoasters.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../../Resources/master.css">
+    <link rel="stylesheet" href="../../resources/master.css">
     <link rel="stylesheet" href="rollercoasters.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../../Resources/skyrush.png">
+        <img src="../../resources/skyrush.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -16,9 +16,9 @@
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
-            <td class="menu_element portfolio link"><a href="../../Portfolio/portfolio.html">Portfolio</a></td>
+            <td class="menu_element portfolio link"><a href="../../portfolio/portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies link"><a href="../hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
+            <td class="menu_element contact link"><a href="../../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
