--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../Resources/master.css">
+    <link rel="stylesheet" href="../resources/master.css">
     <link rel="stylesheet" href="hobbies.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/flight_deck.png">
+        <img src="../resources/flight_deck.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -16,9 +16,9 @@
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
-            <td class="menu_element portfolio link"><a href="../Portfolio/portfolio.html">Portfolio</a></td>
+            <td class="menu_element portfolio link"><a href="../portfolio/portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies current">Hobbies</td>
-            <td class="menu_element contact link"><a href="../Contact/contact.html">Contact</a></td>
+            <td class="menu_element contact link"><a href="../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
@@ -29,7 +29,7 @@
         <tr>
           <td class="mnr hobby_element hobby_name">Modnation Racers</td>
           <td class="mnr hobby_element hobby_description">Modnation Races was a kart racing game I used to play on the PS3 where you could create your own characters, karts, and tracks. Here, I put all of the tracks that I am willing to put on the internet.</td>
-          <td class="mnr hobby_element hobby_more"><a href="ModnationRacers/modnationracers.html">More..</a></td>
+          <td class="mnr hobby_element hobby_more"><a href="mnr/modnationracers.html">More..</a></td>
         </tr>
       </table>
 -->
@@ -38,7 +38,7 @@
         <tr>
           <td class="rc hobby_element hobby_name">Roller Coasters</td>
           <td class="rc hobby_element hobby_description">Coasters have always been very important to me since I played the first Roller Coaster Tycoon. Here, I keep track of my CC, rides I have ridden, and other coaster related shennanigans.</td>
-          <td class="rc hobby_element hobby_more"><a href="RollerCoasters/rollercoasters.html">More..</a></td>
+          <td class="rc hobby_element hobby_more"><a href="coaster/rollercoasters.html">More..</a></td>
         </tr>
       </table>
     </div>
