--- a/Portfolio/Fuzor/fuzor.html
+++ b/Portfolio/Fuzor/fuzor.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../../Resources/master.css">
-    <link rel="stylesheet" href="../Resources/master_piece.css">
+    <link rel="stylesheet" href="../../resources/master.css">
+    <link rel="stylesheet" href="../resources/master_piece.css">
     <title>Connor Deakin</title>
   </head>
   <body>
@@ -17,8 +17,8 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
-            <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
+            <td class="menu_element hobbies link"><a href="../../hobbies/hobbies.html">Hobbies</a></td>
+            <td class="menu_element contact link"><a href="../../contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
