--- a/redesign/index.html
+++ b/redesign/index.html
@@ -4,16 +4,177 @@
   </head>
   <body>
     <div class="main">
-      <div class="header">
-        <div class="header_bar">
-          <div class="header_text_container">
-            <div class="header_text">Connor Deakin - Underdisc</div>
+      <div class="header_cell">
+        <div class="header_graphic">
+          <div class="header_container">
+            <div class="header_text">
+              Connor Deakin - Underdisc
+            </div>
           </div>
         </div>
       </div>
-      <div class="item sidebar">nav elements
+      <div class="sidebar_cell">
+        <div class="sidebar_graphic">
+          <div class="sidebar_container">
+            <div class="sidebar_text">
+              Some Test Text. This is just a test to get the sidebar text to
+              overflow so I can test what scrolling on both the sidebar and the
+              content section might feel like.
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="item content">content
+      <div class="item content">
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
       </div>
     </div>
   </body>
