Removed the workarounds used for the obtuse angles in favor of using squares because they are easier to deal with both visually and functionally.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -5,23 +5,15 @@
   <body>
     <div class="main">
       <div class="header_cell">
-        <div class="header_graphic">
-          <div class="header_container">
-            <div class="header_text">
-              Connor Deakin - Underdisc
-            </div>
-          </div>
+        <div class="header_content">
+          Connor Deakin - Underdisc
         </div>
       </div>
       <div class="sidebar_cell">
-        <div class="sidebar_graphic">
-          <div class="sidebar_container">
-            <div class="sidebar_text">
-              Some Test Text. This is just a test to get the sidebar text to
-              overflow so I can test what scrolling on both the sidebar and the
-              content section might feel like.
-            </div>
-          </div>
+        <div class="sidebar_content">
+          Some Test Text. This is just a test to get the sidebar text to
+          overflow so I can test what scrolling on both the sidebar and the
+          content section might feel like.
         </div>
       </div>
       <div class="item content">
