--- a/redesign/index.html
+++ b/redesign/index.html
@@ -9,114 +9,25 @@
           Connor Deakin - Underdisc
         </div>
       </div>
-      <div class="sidebar_cell">
-        <div class="sidebar_content">
-          Some Test Text. This is just a test to get the sidebar text to
-          overflow so I can test what scrolling on both the sidebar and the
-          content section might feel like.
-        </div>
+      <div class="sidebar_content">
+        Some Test Text. This is just a test to get the sidebar text to
+        overflow so I can test what scrolling on both the sidebar and the
+        content section might feel like. I am now going to copy and paste
+        this text a few times to force the sidebar into scroll mode.
+        Some Test Text. This is just a test to get the sidebar text to
+        overflow so I can test what scrolling on both the sidebar and the
+        content section might feel like. I am now going to copy and paste
+        this text a few times to force the sidebar into scroll mode.
+        Some Test Text. This is just a test to get the sidebar text to
+        overflow so I can test what scrolling on both the sidebar and the
+        content section might feel like. I am now going to copy and paste
+        this text a few times to force the sidebar into scroll mode.
+        Some Test Text. This is just a test to get the sidebar text to
+        overflow so I can test what scrolling on both the sidebar and the
+        content section might feel like. I am now going to copy and paste
+        this text a few times to force the sidebar into scroll mode.
       </div>
-      <div class="item content">
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
-        I will be putting all the content of an article here. When auto
-        generating the website, the header and sidebar will remain almost
-        the same for every page. The only difference is that the sidebar will
-        highlight the currently selected page and that will be determined
-        while generating the website. Everything else will remain the same
-        though. Now I am going to copy and past this text a few times so we can
-        have a page full of content. It will not include spacing or anything
-        like that, but that is something we can worry about once we start
-        worrying about the styling of the content itself. This will involve
-        auto generating the content using a markdown file.
+      <div class="content">
         I will be putting all the content of an article here. When auto
         generating the website, the header and sidebar will remain almost
         the same for every page. The only difference is that the sidebar will
