A border has been added around the main content section and I'm not sure if I like it. The sidebar now contains a grid of elements that will be highlighted when hovered over.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -3,31 +3,65 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
+    <div class="main_grid">
       <div class="header_cell">
         <div class="header_content">
           Connor Deakin - Underdisc
         </div>
       </div>
-      <div class="sidebar_content">
-        Some Test Text. This is just a test to get the sidebar text to
-        overflow so I can test what scrolling on both the sidebar and the
-        content section might feel like. I am now going to copy and paste
-        this text a few times to force the sidebar into scroll mode.
-        Some Test Text. This is just a test to get the sidebar text to
-        overflow so I can test what scrolling on both the sidebar and the
-        content section might feel like. I am now going to copy and paste
-        this text a few times to force the sidebar into scroll mode.
-        Some Test Text. This is just a test to get the sidebar text to
-        overflow so I can test what scrolling on both the sidebar and the
-        content section might feel like. I am now going to copy and paste
-        this text a few times to force the sidebar into scroll mode.
-        Some Test Text. This is just a test to get the sidebar text to
-        overflow so I can test what scrolling on both the sidebar and the
-        content section might feel like. I am now going to copy and paste
-        this text a few times to force the sidebar into scroll mode.
+      <div class="sidebar_grid">
+        <!-- We have one empty element that acts as padding. -->
+        <div class="sidebar_element"></div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">Element</div>
       </div>
-      <div class="content">
+      <div class="page_content">
         I will be putting all the content of an article here. When auto
         generating the website, the header and sidebar will remain almost
         the same for every page. The only difference is that the sidebar will
