All of the extra sidebar elements used for testing have been removed.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -12,54 +12,20 @@
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div class="sidebar_element"></div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
-        <div class="sidebar_element">Element</div>
+        <div class="sidebar_element">
+          <div class="sidebar_option">
+            About
+          </div>
+        </div>
+        <div class="sidebar_element">
+          Blog
+        </div>
+        <div class="sidebar_element">
+          Portfolio
+        </div>
+        <div class="sidebar_element">
+          Contact
+        </div>
       </div>
       <div class="page_content">
         I will be putting all the content of an article here. When auto
