The top header bar has been removed due to the amount of unused space in favor of a small header that only exists on the sidebar. The header will only contain my screen name and it now uses my favorite font.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -4,18 +4,14 @@
   </head>
   <body>
     <div class="main_grid">
-      <div class="header_cell">
-        <div class="header_content">
-          Connor Deakin - Underdisc
-        </div>
+      <div class="header_content">
+        Underdisc
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div class="sidebar_element"></div>
         <div class="sidebar_element">
-          <div class="sidebar_option">
-            About
-          </div>
+          About
         </div>
         <div class="sidebar_element">
           Blog
