The sidebar element backgrounds now transition to the color of the content border when hovered over.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -9,7 +9,7 @@
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
-        <div class="sidebar_element"></div>
+        <div></div>
         <div class="sidebar_element">
           About
         </div>
