The compact version of the site now scrolls away the header bar. Not having a grid element with scrolling allows  a scroll bar to show up on mobile.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -74,6 +74,56 @@
         like that, but that is something we can worry about once we start
         worrying about the styling of the content itself. This will involve
         auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
+        I will be putting all the content of an article here. When auto
+        generating the website, the header and sidebar will remain almost
+        the same for every page. The only difference is that the sidebar will
+        highlight the currently selected page and that will be determined
+        while generating the website. Everything else will remain the same
+        though. Now I am going to copy and past this text a few times so we can
+        have a page full of content. It will not include spacing or anything
+        like that, but that is something we can worry about once we start
+        worrying about the styling of the content itself. This will involve
+        auto generating the content using a markdown file.
       </div>
     </div>
   </body>
