--- a/redesign/index.html
+++ b/redesign/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="style.css">
+    <title>Underdisc</title>
   </head>
   <body>
     <div class="main_grid">
