The dropdown button div only shows up on the mobile version of the website. The font size of the content was decreased.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -6,8 +6,13 @@
   </head>
   <body>
     <div class="main_grid">
-      <div class="header_content">
-        Underdisc
+      <div class="header_container">
+        <div class="header_text">
+          Underdisc
+        </div>
+        <div class="header_dropdown_button">
+          v
+        </div>
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
