--- a/redesign/index.html
+++ b/redesign/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="main.js"></script>
     <title>Underdisc</title>
   </head>
   <body>
@@ -10,11 +11,10 @@
         <div class="header_text">
           Underdisc
         </div>
-        <div class="header_dropdown_button">
-          v
+        <div onclick="OnDropdownClick()" class="header_dropdown_button">
         </div>
       </div>
-      <div class="sidebar_grid">
+      <div id="sidebar" class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
         <div class="sidebar_element">
@@ -30,7 +30,7 @@
           Contact
         </div>
       </div>
-      <div class="page_content">
+      <div id="content" class="page_content">
         I will be putting all the content of an article here. When auto
         generating the website, the header and sidebar will remain almost
         the same for every page. The only difference is that the sidebar will
