--- a/redesign/index.html
+++ b/redesign/index.html
@@ -2,7 +2,6 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="main.js"></script>
     <title>Underdisc</title>
   </head>
   <body>
@@ -14,23 +13,23 @@
         <div onclick="OnDropdownClick()" class="header_dropdown_button">
         </div>
       </div>
-      <div id="sidebar" class="sidebar_grid">
+      <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <div class="sidebar_element">
+        <a class="sidebar_element">
           About
-        </div>
-        <div class="sidebar_element">
+        </a>
+        <a class="sidebar_element">
           Blog
-        </div>
-        <div class="sidebar_element">
+        </a>
+        <a class="sidebar_element">
           Portfolio
-        </div>
-        <div class="sidebar_element">
+        </a>
+        <a class="sidebar_element">
           Contact
-        </div>
+        </a>
       </div>
-      <div id="content" class="page_content">
+      <div class="page_content">
         I will be putting all the content of an article here. When auto
         generating the website, the header and sidebar will remain almost
         the same for every page. The only difference is that the sidebar will
@@ -134,5 +133,6 @@
       </div>
     </div>
   </body>
+  <script type="text/javascript" src="main.js"></script>
 </html>
 
