The sidebar now drops down smoothly on mobile mode using a quad in ease type. In mobile mode, the sidebar is a dropdown. When the dropdown is opened, it will slide into view and the content underneath will slide at the same time to make room for the dropdown.

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -10,7 +10,7 @@
         <div class="header_text">
           Underdisc
         </div>
-        <div onclick="OnDropdownClick()" class="header_dropdown_button">
+        <div class="header_dropdown_button">
         </div>
       </div>
       <div class="sidebar_grid">
