The autogeneration is now fully underway. Content is taken from markdown files, converted into html, inserted into the template html used for the whole website, and the whole html is rendered to html files in the repo's root. There are a few example files that have been created specifically to test the functionality.

--- a/autobiography.html
+++ b/autobiography.html
@@ -1,6 +1,5 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<html><head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>Underdisc</title>
   </head>
@@ -29,8 +28,10 @@
           Contact
         </a>
       </div>
-    </div>
-  </body>
+    <div class="page_content"><h2 id="autobiography">Autobiography</h2>
+<p>Just kidding. I don&apos;t want this page to exist yet. I need to proove myself to the world before the world will give a shit about my history. I will have something here once I do that. If you came here with the hope of actually reading my history, thanks. That means I am moving towards my goals and you&apos;re a part of that.</p></div></div>
+  
   <script type="text/javascript" src="main.js"></script>
-</html>
 
+
+</body></html>
