--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<html><head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>Underdisc</title>
   </head>
@@ -29,8 +28,9 @@
           Contact
         </a>
       </div>
-    </div>
-  </body>
+    <div class="page_content"><h2 id="contact">Contact</h2></div></div>
+  
   <script type="text/javascript" src="main.js"></script>
-</html>
 
+
+</body></html>
