An extra div was added to hold the page content inside of an encapsulated container. This allows the font size of the page content to be changed without affecting the offset of the page content when the dropdown opens. This was a problem because all of the dimensions in the css are specified in em.

--- a/src/template.html
+++ b/src/template.html
@@ -29,6 +29,8 @@
           Contact
         </a>
       </div>
+      <div class="content_container">
+      </div>
     </div>
   </body>
   <script type="text/javascript" src="main.js"></script>
