--- a/autobiography.html
+++ b/autobiography.html
@@ -28,8 +28,10 @@
           Contact
         </a>
       </div>
-    <div class="page_content"><h2 id="autobiography">Autobiography</h2>
+      <div class="content_container">
+      <div class="page_content"><h2 id="autobiography">Autobiography</h2>
 <p>Just kidding. I don&apos;t want this page to exist yet. I need to proove myself to the world before the world will give a shit about my history. I will have something here once I do that. If you came here with the hope of actually reading my history, thanks. That means I am moving towards my goals and you&apos;re a part of that.</p></div></div>
+    </div>
   
   <script type="text/javascript" src="main.js"></script>
 
