--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,9 @@
           Contact
         </a>
       </div>
-    <div class="page_content"><h2 id="contact">Contact</h2></div></div>
+      <div class="content_container">
+      <div class="page_content"><h2 id="contact">Contact</h2></div></div>
+    </div>
   
   <script type="text/javascript" src="main.js"></script>
 
