--- a/src/template.html
+++ b/src/template.html
@@ -7,11 +7,17 @@
   <body>
     <div class="main_grid">
       <div class="header_container">
+        <div class="header_dropdown_container">
+          <div class="header_dropdown">
+            <svg xmlns="http://www.w3.org/2000/svg" width=2em height=2em viewBox="0 0 26.5 26.5">
+              <path fill="#fff" d="M13.2 0A13.2 13.2 0 000 13.2a13.2 13.2 0 0013.2 13.3 13.2 13.2 0 0013.3-13.3A13.2 13.2 0 0013.2 0zm-2.6 5.3h5.3v9.3h5.3l-8 7.9-8-8h5.4z" paint-order="stroke markers fill"/>
+            </svg>
+          </div>
+        </div>
         <div class="header_text">
           Underdisc
         </div>
-        <div class="header_dropdown_button">
-        </div>
+        <div></div>
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
