When the website is in desktop mode, the content is now centered and does not change in width. The empty space is filled with a black background and two triangles that border the page's main grid.

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,18 @@
     <title>Underdisc</title>
   </head>
   <body>
+    <div class="main_grid_accent">
+      <div>
+        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
+          <polygon points="100,0 100,100 50,100" fill="#fff">
+        </svg>
+      </div>
+      <div>
+        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
+          <polygon points="100,100 100,0 50,0" fill="#fff">
+        </svg>
+      </div>
+    </div>
     <div class="main_grid">
       <div class="header_container">
         <div class="header_dropdown_container">
@@ -36,6 +48,18 @@
         </a>
       </div>
       <div class="content_container">
+      </div>
+    </div>
+    <div class="main_grid_accent">
+      <div>
+        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
+          <polygon points="0,0 50,100 0,100" fill="#fff">
+        </svg>
+      </div>
+      <div>
+        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
+          <polygon points="0,0 50,0 0,100" fill="#fff">
+        </svg>
       </div>
     </div>
   </body>
