--- a/src/template.html
+++ b/src/template.html
@@ -5,17 +5,9 @@
     <title>Underdisc</title>
   </head>
   <body>
-    <div class="main_grid_accent">
-      <div>
-        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
-          <polygon points="100,0 100,100 50,100" fill="#fff">
-        </svg>
-      </div>
-      <div>
-        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
-          <polygon points="100,100 100,0 50,0" fill="#fff">
-        </svg>
-      </div>
+    <div class="left_accent_grid">
+      <div></div>
+      <div class="accent"></div>
     </div>
     <div class="main_grid">
       <div class="header_container">
@@ -50,17 +42,9 @@
       <div class="content_container">
       </div>
     </div>
-    <div class="main_grid_accent">
-      <div>
-        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
-          <polygon points="0,0 50,100 0,100" fill="#fff">
-        </svg>
-      </div>
-      <div>
-        <svg class="accent" viewBox="0 0 100 100" width="100%" height="100%" preserveAspectRatio="none" >
-          <polygon points="0,0 50,0 0,100" fill="#fff">
-        </svg>
-      </div>
+    <div class="right_accent_grid">
+      <div class="accent"></div>
+      <div></div>
     </div>
   </body>
   <script type="text/javascript" src="main.js"></script>
