--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css">
+    <link class="main_style" rel="stylesheet" href="style.css">
     <title>Underdisc</title>
   </head>
   <body>
@@ -26,16 +26,16 @@
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <a class="sidebar_element" href="index.html">
+        <a class="sidebar_element index_link" href="index.html">
           Home
         </a>
-        <a class="sidebar_element" href="blog.html">
+        <a class="sidebar_element blog_link" href="blog.html">
           Blog
         </a>
-        <a class="sidebar_element" href="portfolio.html">
+        <a class="sidebar_element portfolio_link" href="portfolio.html">
           Portfolio
         </a>
-        <a class="sidebar_element" href="contact.html">
+        <a class="sidebar_element contact_link" href="contact.html">
           Contact
         </a>
       </div>
@@ -47,6 +47,6 @@
       <div></div>
     </div>
   </body>
-  <script type="text/javascript" src="main.js"></script>
+  <script class="main_script" type="text/javascript" src="main.js"></script>
 </html>
 
