Minor content updates. Headings in markdown files have been modified to reflect the heading changes from the previous commit.

--- a/blog.html
+++ b/blog.html
@@ -39,9 +39,9 @@
         </a>
       </div>
       <div class="content_container">
-      <div class="page_content"><h3 id="blog">Blog</h3>
-<h1 id="learningmoreaboutwebdevelopmentbloglearning_more_about_web_developmenthtml"><a href="blog/learning_more_about_web_development.html">Learning More About Web Development</a></h1>
-<p>20-07-23 - After leaving my job, my first task has been completely overhauling my website to what it is now. This is about that and some of the things I learned about web developlment along the way.</p>
+      <div class="page_content"><h1 id="blog">Blog</h1>
+<h3 id="learningmoreaboutwebdevelopmentbloglearning_more_about_web_developmenthtml"><a href="blog/learning_more_about_web_development.html">Learning More About Web Development</a></h3>
+<p><code>20-07-23</code> - After leaving my job, my first task has been completely overhauling my website to what it is now. This is about that and some of the things I learned about web developlment along the way.</p>
 <hr></div></div>
     </div>
     <div class="right_accent_grid">
