--- a/projects.html
+++ b/projects.html
@@ -32,15 +32,12 @@
         <a class="sidebar_element blog_link" href="blog.html">
           Blog
         </a>
-        <a class="sidebar_element portfolio_link" href="portfolio.html">
-          Portfolio
-        </a>
-        <a class="sidebar_element contact_link" href="contact.html">
-          Contact
+        <a class="sidebar_element projects_link" href="projects.html">
+          Projects
         </a>
       </div>
       <div class="content_container">
-      <div class="page_content"><h2 id="portfolio">Portfolio</h2></div></div>
+      <div class="page_content"><h1 id="projects">Projects</h1></div></div>
     </div>
     <div class="right_accent_grid">
       <div class="accent"></div>
