--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
         <a class="sidebar_element blog_link" href="blog.html">
           Blog
         </a>
-        <a class="sidebar_element portfolio_link" href="portfolio.html">
-          Portfolio
-        </a>
-        <a class="sidebar_element contact_link" href="contact.html">
-          Contact
+        <a class="sidebar_element projects_link" href="projects.html">
+          Projects
         </a>
       </div>
       <div class="content_container">
