Dates on the blog page are now on the same line as the title for the blog post.

--- a/blog.html
+++ b/blog.html
@@ -39,8 +39,8 @@
       </div>
       <div class="content_container">
       <div class="page_content"><h1 id="blog">Blog</h1>
-<h3 id="learningmoreaboutwebdevelopmentblog0_learning_more_about_web_developmentposthtml"><a href="blog/0_learning_more_about_web_development/post.html">Learning More About Web Development</a></h3>
-<p><code>20-07-30</code> - After leaving my job, my first task has been completely overhauling my website to what it is now. This is about that and some of the things I learned about web developlment along the way.</p>
+<h3 id="divclassdate200730divlearningmoreaboutwebdevelopmentblog0_learning_more_about_web_developmentposthtml"><div class="date">20-07-30</div> <a href="blog/0_learning_more_about_web_development/post.html">Learning More About Web Development</a></h3>
+<p>After leaving my job, my first task has been completely overhauling my website to what it is now. This is about that and some of the things I learned about web developlment along the way.</p>
 <hr></div></div>
     </div>
     <div class="right_accent_grid">
