I am performing a test to see if the filename won't show up in the url if it's named index.html.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <a class="sidebar_element index_link" href="index.html">
+        <a class="sidebar_element index_link" href="./">
           Home
         </a>
-        <a class="sidebar_element blog_link" href="blog.html">
+        <a class="sidebar_element blog_link" href="blog/">
           Blog
         </a>
-        <a class="sidebar_element projects_link" href="projects.html">
+        <a class="sidebar_element projects_link" href="projects/">
           Projects
         </a>
       </div>
