The build process will now render all markdown files within a directory recursively (renders markdown files within contained subdirectories as well). Every HTML file is now contained within its own directory as well and named index.html. This will make removing filenames from the urls easier in the future, but the main goal here is organization.

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <a class="sidebar_element index_link" href="./">
+        <a class="sidebar_element index_link" href="index.html">
           Home
         </a>
-        <a class="sidebar_element blog_link" href="blog/">
+        <a class="sidebar_element blog_link" href="blog/index.html">
           Blog
         </a>
-        <a class="sidebar_element projects_link" href="projects/">
+        <a class="sidebar_element projects_link" href="projects/index.html">
           Projects
         </a>
       </div>
       <div class="content_container">
-      <div class="page_content"><h1 id="welcome">Welcome</h1>
+      <div class="page_content"><h1>Welcome</h1>
 <p>It seems as though you have found my small corner of the internet. Thanks for stopping by. I am Underdisc, a programmer by trade, but a strange amalgamation of programmer and other things by nature.</p>
 <p>This website is intended to act as a place that allows me to share what I have done and what I am currently doing. It is not made with the goal to get hired. It is made as a place where I can express myself and tell others all the things I am excited about. Feel free to stop by whenever you wish. I hope there are things I have written or shared that excite you just as much as they excite me.</p></div></div>
     </div>
