--- a/src/template.html
+++ b/src/template.html
@@ -31,10 +31,10 @@
         <a class="sidebar_element index_link" href="index.html">
           Home
         </a>
-        <a class="sidebar_element blog_link" href="blog.html">
+        <a class="sidebar_element blog_link" href="blog/index.html">
           Blog
         </a>
-        <a class="sidebar_element projects_link" href="projects.html">
+        <a class="sidebar_element projects_link" href="projects/index.html">
           Projects
         </a>
       </div>
