The markdown for varkor has been moved into its own directory to keep the website structure consistent.

--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@
       <div class="page_content"><h1>Projects</h1>
 <p>Below is a list of a large majority of the projects I have worked on. Each project has a small description below it and the link can be followed to find out more about the project and my contributions to it.</p>
 <hr>
-<h3><a href="varkor.html">Varkor</a></h3>
+<h3><a href="varkor/index.html">Varkor</a></h3>
 <p>A custom game engine I plan to use for my future projects and I hope to use for more than just games. This is what I am currently working on.</p>
 <hr></div></div>
     </div>
